--- a/Uala Map.xcodeproj/xcshareddata/xcschemes/RELEASE - Uala Map.xcscheme
+++ b/Uala Map.xcodeproj/xcshareddata/xcschemes/RELEASE - Uala Map.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAB89AFC2DD674A4007B62CA"
+               BuildableName = "Uala MapTests.xctest"
+               BlueprintName = "Uala MapTests"
+               ReferencedContainer = "container:Uala Map.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
